[tool.poetry]
name = "quenassist-app"
version = "0.1.0"
description = "An advanced social communicatoin assistance"
authors = ["Xinhao Lee <xinhaolee962@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
dynaconf = "^3.2.6"
sqlalchemy = "^2.0.32"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"
langchain = "^0.2.14"
transformers = "^4.44.2"
langchain-milvus = "^0.1.4"
langchain-openai = "^0.1.22"
alembic = "^1.13.2"
mysqlclient = "^2.2.4"
langchain-nvidia-ai-endpoints = "^0.2.2"
langchain-community = "^0.2.16"
boto3 = "^1.35.11"
gradio-client = "^1.3.0"
langgraph = "^0.2.16"
python-multipart = "^0.0.9"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
flake8 = "^7.1.1"
pytest = "^8.3.2"
pytest-ordering = "^0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
quen = "quenassist_app.cmdline:main"
